# brlib

./: README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: dependencies.yml  full-test.yml  full-tests.yml  publish.yml  test.yml
scripts/: refresh_tests.py  refresh_wiki.py  wiki.py
src/brlib/: __init__.py  all_major_leaguers.py  all_players.py  find_asg.py  find_games.py  find_teams.py  game.py  game_set.py  games.py  get_games.py  get_players.py  get_teams.py  options.py  player.py  player_set.py  players.py  team.py  team_set.py  teams.py  test_connection.py
src/brlib/_helpers/: __init__.py  abbreviations_manager.py  constants.py  inputs.py  no_hitter_dicts.py  requests_manager.py  singleton.py  typechecking.py  utils.py
tests/: case_ids.py  conftest.py  get_expected.py  test_all_major_leaguers.py  test_all_players.py  test_cases.py  test_find_asg.py  test_find_games.py  test_find_teams.py  test_game.py  test_game_set.py  test_options.py  test_player.py  test_player_set.py  test_team.py  test_team_set.py
tests/_helpers/: test_abbreviations_manager.py  test_inputs.py  test_no_hitter_dicts.py  test_typechecking.py  test_utils.py
tests/abbreviations_manager/_helpers/: test_abbreviations_manager.py  test_no_hitter_dicts.py
tests/expected/games/: records.csv
tests/expected/games/original/1961-allstar-game-1/: batting.csv  fielding.csv  info.csv  linescore.csv  pitching.csv  players.json  team_info.csv  ump_info.csv
tests/expected/games/original/2025-allstar-game/: batting.csv  fielding.csv  info.csv  linescore.csv  pitching.csv  players.json  team_info.csv  ump_info.csv
tests/expected/games/original/ANA202305090/: batting.csv  fielding.csv  info.csv  linescore.csv  pitching.csv  players.json  team_info.csv  teams.json  ump_info.csv
tests/expected/games/original/BOS201708250/: batting.csv  fielding.csv  info.csv  pitching.csv  players.json  team_info.csv  teams.json  ump_info.csv
tests/expected/games/original/BSN191107122/: batting.csv  fielding.csv  info.csv  linescore.csv  pitching.csv  players.json  team_info.csv  teams.json  ump_info.csv
tests/expected/games/original/CHN196207291/: batting.csv  fielding.csv  info.csv  linescore.csv  pitching.csv  players.json  team_info.csv  teams.json  ump_info.csv
tests/expected/games/original/CLE192805010/: batting.csv  fielding.csv  info.csv  linescore.csv  pitching.csv  players.json  team_info.csv  teams.json  ump_info.csv
tests/expected/games/original/FLO199407290/: batting.csv  fielding.csv  info.csv  linescore.csv  pitching.csv  players.json  team_info.csv  teams.json  ump_info.csv
tests/expected/games/original/MLA190105301/: batting.csv  fielding.csv  info.csv  linescore.csv  pitching.csv  players.json  team_info.csv  teams.json  ump_info.csv
tests/expected/games/original/NYN200908230/: batting.csv  fielding.csv  info.csv  pitching.csv  players.json  team_info.csv  teams.json  ump_info.csv
tests/expected/games/original/PHI202211020/: batting.csv  fielding.csv  info.csv  pitching.csv  players.json  team_info.csv  teams.json  ump_info.csv
tests/expected/games/original/PIT192010023/: batting.csv  fielding.csv  info.csv  linescore.csv  pitching.csv  players.json  team_info.csv  teams.json  ump_info.csv
tests/expected/games/original/SEA197805231/: batting.csv  fielding.csv  info.csv  linescore.csv  pitching.csv  players.json  team_info.csv  teams.json  ump_info.csv
tests/expected/games/original/SEA201106250/: batting.csv  fielding.csv  info.csv  linescore.csv  pitching.csv  players.json  team_info.csv  teams.json  ump_info.csv
tests/expected/games/original/SEA201208150/: batting.csv  fielding.csv  info.csv  linescore.csv  pitching.csv  players.json  team_info.csv  teams.json  ump_info.csv
tests/expected/games/original/SEA201804190/: batting.csv  fielding.csv  info.csv  pitching.csv  players.json  team_info.csv  teams.json  ump_info.csv
tests/expected/teams/: records.csv
(+342 files in other folders)
