[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "brlib"
description = "A library for collecting baseball statistics from Baseball Reference"
authors = [{ name = "John Bieren", email = "jbieren64@gmail.com" }]
dynamic = ["version"]
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.12.0,<4.15.0",
    "curl-cffi>=0.11.1,<0.15.0",
    "lxml>=5.0.0,<7.0.0",
    "pandas>=2.2.0,<3.0.0",
    "platformdirs>=4.0.0,<5.0.0",
    "tqdm>=4.66.0,<5.0.0"
]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE.txt"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["baseball reference", "baseball", "baseball stats", "mlb", "mlb stats"]

[project.optional-dependencies]
dev = [
    "black==26.1.0",
    "isort==8.0.0",
    "pytest>=7.0.0,<10.0.0"
]

[project.urls]
Documentation = "https://github.com/john-bieren/brlib/wiki"
GitHub = "https://github.com/john-bieren/brlib"
Issues = "https://github.com/john-bieren/brlib/issues"
"Release Notes" = "https://github.com/john-bieren/brlib/releases"

[tool.hatch.version]
path = "src/brlib/__init__.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312", "py313", "py314"]

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["brlib"]

[tool.uv]
package = true
